Add targetInflight to stats to